<resources>
    <string name="app_name">Workout Randomizer</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_landing">Selection Activity</string>
    <string name="title_activity_activity_workout">Workout Activity</string>
    <string name="title_activity_activity_results">Results Activity</string>

    <!--Selection Activity-->
    <string name="selection_tooltip">Press the rotate button to turn the body,
    the muscles to target them, or the forward arrow to generate exercises.</string>

    <!--Workout Activity-->
    <string name="button_generate_workout">Generate</string>
    <string name="invalid_selection">Select at least one muscle group.</string>
    <string name="button_done">I\'m done</string>
    <string name="no_exercises">No exercises queued.</string>
    <string name="workout_tooltip">Swipe exercises left to skip or right to complete. Touch
    exercises to view their guides.</string>
    <string name="ok_button">OK</string>

    <!--Results Activity-->
    <string name="list_muscle_groups">Muscle Groups Selected</string>
    <string name="list_exercises">Exercises Completed</string>
    <string name="button_restart">Start Over</string>
    <string name="button_clear_data">Clear All Data</string>

    <!--Setting Activity-->
    <string name="exercise_type_section">Exercise Types</string>
    <string name="cardio">Cardio</string>
    <string name="olympic">Olympic Weightlifting</string>
    <string name="plyometrics">Plyometrics</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="strength">Strength</string>
    <string name="stretching">Stretching</string>
    <string name="strongman">Strongman</string>

    <string name="equipment_section">Equipment</string>
    <string name="bands">Bands</string>
    <string name="barbell">Barbell</string>
    <string name="body">Body Only</string>
    <string name="cable">Cable</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="ez_bar">E-Z Curl Bar</string>
    <string name="exercise_ball">Exercise Ball</string>
    <string name="foam_roll">Foam Roll</string>
    <string name="kettlebells">Kettlebells</string>
    <string name="machine">Machine</string>
    <string name="medicine_ball">Medicine Ball</string>
    <string name="none">None</string>
    <string name="other">Other</string>

    <string name="mechanics_section">Mechanics</string>
    <string name="compound">Compound</string>
    <string name="isolation">Isolation</string>
    <string name="neither">N/A</string>

    <string name="force_section">Force</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="static_force">Static</string>

    <string name="difficulty_section">Exercise Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="sports_section">Sports Exercises</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="gender_section">Gender</string>
    <string name="male">Show male media</string>

    <!--Exercise Details Activity-->
    <string name="othergroups">Others Involved</string>
    <string name="difficulty">Difficulty</string>
    <string name="type">Exercise Type</string>
    <string name="mechanics">Mechanics</string>
    <string name="equipment">Equipment</string>
    <string name="force">Force</string>
    <string name="sport">Sport</string>
    <string name="default_value">None</string>

    <!--Summary Fragment-->
    <string name="summary_title">Summary</string>
    <string name="favorite_group">Favorite Muscle Group</string>
    <string name="favorite_exercise">Favorite Exercise</string>
    <string name="least_favorite_exercise">Least Favorite Exercise</string>
    <string name="completed">Exercises Completed</string>
    <string name="skipped">Exercises Skipped</string>
    <string name="current_streak">Current Streak</string>
    <string name="longest_streak">Longest Streak</string>

</resources>
