<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/list_muscle_groups" />

    <ListView
        android:id="@+id/list_view_muscle_group_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/list_exercises" />

    <ListView
        android:id="@+id/list_view_exercise_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#00000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/clear_data_button"
            style="@style/AppButton"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_data"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/restart_button"
            style="@style/AppButton"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_restart"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>